--- a/main.html
+++ b/main.html
@@ -8,9 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<li><a href="#">home</a></li>
+        <li><a href="#">About us</a></li>
+		<li><a href="#">Contact us</a></li>
+	</nav>
+	<h1>3 random images</h1>
+	<img src="https://picsum.photos/id/123/200/300" alt>
+	<img src="https://picsum.photos/id/124/200/300">
+	<img src="https://picsum.photos/id/125/200/300">
     <script type="text/javascript" src="./script.js">
+		
 </script>
 
 </body>
 
-</html>
+</html> 
